--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Universal Routing & Rendering with React & Redux was too hard. Now it's easy.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "babel-node source/test/index.js"
+    "test": "babel-node source/test/index.js",
+    "lint": "eslint --cache .",
+    "watch": "watch \"clear && npm run lint -s && npm run test -s\" source",
+    "check": "npm run lint && npm run test && npm outdated --depth=0",
+    "update": "updtr"
   },
   "repository": {
     "type": "git",
@@ -23,5 +27,13 @@
   "bugs": {
     "url": "https://github.com/ericelliott/react-easy-universal/issues"
   },
-  "homepage": "https://github.com/ericelliott/react-easy-universal#readme"
+  "homepage": "https://github.com/ericelliott/react-easy-universal#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-cli": "6.4.5",
+    "eslint": "1.10.3",
+    "tap-xunit": "1.3.1",
+    "updtr": "0.1.7",
+    "watch": "0.17.1"
+  }
 }
