--- a/package.json
+++ b/package.json
@@ -28,12 +28,32 @@
     "url": "https://github.com/ericelliott/react-easy-universal/issues"
   },
   "homepage": "https://github.com/ericelliott/react-easy-universal#readme",
-  "dependencies": {},
+  "dependencies": {
+    "react": "0.14.6",
+    "react-dom": "0.14.6",
+    "react-redux": "4.0.6",
+    "react-router": "2.0.0-rc5",
+    "redux": "3.0.6"
+  },
   "devDependencies": {
     "babel-cli": "6.4.5",
+    "babel-core": "6.4.5",
+    "babel-eslint": "5.0.0-beta6",
+    "babel-loader": "6.2.1",
+    "babel-plugin-react-transform": "2.0.0",
+    "babel-plugin-transform-runtime": "6.4.3",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-2": "6.3.13",
     "eslint": "1.10.3",
+    "eslint-plugin-react": "3.16.1",
+    "express": "4.13.4",
+    "source-map-support": "0.4.0",
+    "supertest": "1.1.0",
     "tap-xunit": "1.3.1",
+    "tape": "4.4.0",
     "updtr": "0.1.7",
-    "watch": "0.17.1"
+    "watch": "0.17.1",
+    "webpack": "1.12.12"
   }
 }
