--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --cache .",
     "watch": "watch \"clear && npm run lint -s && npm run test -s\" source",
     "check": "npm run lint && npm run test && npm outdated --depth=0",
+    "debug:test": "iron-node source/test/debug.js",
     "update": "updtr"
   },
   "repository": {
@@ -33,7 +34,10 @@
     "react-dom": "0.14.6",
     "react-redux": "4.0.6",
     "react-router": "2.0.0-rc5",
-    "redux": "3.0.6"
+    "react-router-redux": "2.1.0",
+    "redux": "3.0.6",
+    "redux-logger": "2.4.0",
+    "redux-thunk": "1.0.3"
   },
   "devDependencies": {
     "babel-cli": "6.4.5",
@@ -42,6 +46,7 @@
     "babel-loader": "6.2.1",
     "babel-plugin-react-transform": "2.0.0",
     "babel-plugin-transform-runtime": "6.4.3",
+    "babel-polyfill": "6.3.14",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-2": "6.3.13",
