--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-2": "6.3.13",
+    "cheerio": "0.19.0",
     "eslint": "1.10.3",
     "eslint-plugin-react": "3.16.1",
     "express": "4.13.4",
