--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "babel-node source/test/index.js",
+    "test:e2e": "cross-env NODE_PORT=3000 NODE_PATH=source babel-node source/test/e2e.js",
     "lint": "eslint --cache .",
     "watch": "watch \"clear && npm run lint -s && npm run test -s\" source",
     "check": "npm run lint && npm run test && npm outdated --depth=0",
@@ -30,6 +31,7 @@
   },
   "homepage": "https://github.com/ericelliott/react-easy-universal#readme",
   "dependencies": {
+    "cross-env": "1.0.7",
     "react": "0.14.6",
     "react-dom": "0.14.6",
     "react-redux": "4.0.6",
@@ -54,6 +56,7 @@
     "eslint": "1.10.3",
     "eslint-plugin-react": "3.16.1",
     "express": "4.13.4",
+    "nightwatch-autorun": "2.1.2",
     "source-map-support": "0.4.0",
     "supertest": "1.1.0",
     "tap-xunit": "1.3.1",
