--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "Universal Routing & Rendering with React & Redux was too hard. Now it's easy.",
   "main": "dist/index.js",
   "scripts": {
+    "clean": "rimraf build && mkdir -p build && cp source/test/fixtures/index.html ./build/index.html",
+    "start:test-server": "babel-node source/test/start-server.js",
     "test": "babel-node source/test/index.js",
     "test:e2e": "cross-env NODE_PORT=3000 NODE_PATH=source babel-node source/test/e2e.js",
+    "prebuild:test": "npm run -s clean",
+    "build:test": "browserify source/test/client/index.js -o build/index.js -t [ babelify --presets [ es2015 react ] ]",
     "lint": "eslint --cache .",
     "watch": "watch \"clear && npm run lint -s && npm run test -s\" source",
+    "watch:client": "watch \"clear && npm run lint -s && echo 'Lint passed. Watching...' && npm run -s build:test\" source",
     "check": "npm run lint && npm run test && npm outdated --depth=0",
     "debug:test": "iron-node source/test/debug.js",
     "update": "updtr"
@@ -52,13 +57,17 @@
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-2": "6.3.13",
+    "babelify": "7.2.0",
+    "browserify": "13.0.0",
     "cheerio": "0.19.0",
     "eslint": "1.10.3",
     "eslint-plugin-react": "3.16.1",
     "express": "4.13.4",
     "nightwatch-autorun": "2.1.2",
+    "rimraf": "2.5.1",
     "source-map-support": "0.4.0",
     "supertest": "1.1.0",
+    "tap-browser-color": "0.1.2",
     "tap-xunit": "1.3.1",
     "tape": "4.4.0",
     "updtr": "0.1.7",
