Add test docs & fix scripts.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start:test-server": "babel-node source/test/start-server.js",
     "test": "babel-node source/test/index.js",
     "test:e2e": "cross-env NODE_PORT=3000 NODE_PATH=source babel-node source/test/e2e.js",
-    "prebuild:test": "npm run -s clean",
-    "build:test": "browserify source/test/client/index.js -o build/index.js -t [ babelify --presets [ es2015 react ] ]",
-    "lint": "eslint --cache .",
+    "build:client": "browserify source/test/fixtures/client.js -o build/index.js -t [ babelify --presets [ es2015 react ] ]",
+    "prebuild:test": "npm run -s clean && npm run -s build:client",
+    "build:test": "browserify source/test/client/index.js -o build/browser-tests.js -t [ babelify --presets [ es2015 react ] ]",
+    "lint": "eslint .",
     "watch": "watch \"clear && npm run lint -s && npm run test -s\" source",
     "watch:client": "watch \"clear && npm run lint -s && npm run -s test && npm run -s build:test\" source",
     "check": "npm run lint && npm run test && npm outdated --depth=0",
@@ -43,13 +44,12 @@
     "react-router": "2.0.0-rc5",
     "react-router-redux": "2.1.0",
     "redux": "3.0.6",
-    "redux-logger": "2.4.0",
     "redux-thunk": "1.0.3"
   },
   "devDependencies": {
     "babel-cli": "6.4.5",
     "babel-core": "6.4.5",
-    "babel-eslint": "5.0.0-beta6",
+    "babel-eslint": "4.1.8",
     "babel-loader": "6.2.1",
     "babel-plugin-react-transform": "2.0.0",
     "babel-plugin-transform-runtime": "6.4.3",
