--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Universal Routing & Rendering with React & Redux was too hard. Now it's easy.",
   "main": "dist/index.js",
   "scripts": {
-    "clean": "rimraf build && mkdir -p build && mkdir -p build/static && cp source/test/fixtures/index.html ./build/index.html",
+    "clean": "rimraf dist && rimraf build && mkdir -p dist && mkdir -p build && mkdir -p build/static && cp source/test/fixtures/index.html ./build/index.html",
     "start:client-tests": "serve build",
     "start:server": "babel-node source/test/start-server.js",
     "test": "babel-node source/test/index.js",
@@ -12,6 +12,8 @@
     "build:client": "browserify source/test/fixtures/client.js -o build/index.js -t [ babelify --presets [ es2015 react ] ]",
     "prebuild:test": "npm run -s clean && npm run -s build:client",
     "build:test": "browserify source/test/client/index.js -o build/static/browser-tests.js -t [ babelify --presets [ es2015 react ] ] && cp build/static/browser-tests.js build/.",
+    "build": "npm run clean && browserify source/index.js -o dist/index.js -t [ babelify --presets [ es2015 react ] ] ",
+    "prepublish": "npm run build",
     "lint": "eslint .",
     "watch": "watch \"clear && npm run lint -s && npm run test -s\" source",
     "watch:client": "watch \"clear && npm run lint -s && npm run -s build:test && npm run -s test\" source",
